2008-02-05  Sven Neumann  <sven@gimp.org>

	* app/dialogs/image-new-dialog.c (image_new_create_image):
	use the user context when creating the new image. Fixes bug #514082.

2008-02-05  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/mail.c: simplified code and user interface by
	removing the uuencode option and the comment field which only
	duplicated the message body.
	(to64): fixed a bug in the base64 encoding.

2008-02-05  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/mail.c: changed menu label and dialog title to
	"Send by Email".

2008-02-05  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/print.c: removed ellipsis from "Page Setup" menu
	entry as specified in the HIG.

2008-02-05  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimpimagemaptool.c (gimp_image_map_tool_response): don't
	try to add a NULL config to the recent settings menu.

2008-02-05  Michael Natterer  <mitch@gimp.org>

	* themes/Default/images/Makefile.am
	* themes/Default/images/stock-gegl-16.png
	* themes/Default/images/stock-gegl-24.png
	* libgimpwidgets/gimpstock.[ch]: new stock icon to be replaced by
	somebody who can draw ;)

	* app/tools/gimpgegltool.c: use it.

2008-02-05  Michael Natterer  <mitch@gimp.org>

	* app/tools/Makefile.am
	* app/tools/gimpgegltool.[ch]: add experimental GEGL tool which
	will allow to try arbitrary GEGL operations. 100% unusable at the
	moment.

	* app/tools/gimp-tools.c: register it.

	* app/dialogs/dialogs.c: register its dialog.

	* menus/image-menu.xml.in: add it to the tools menu.

2008-02-05  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/psd-save.c (write_pixel_data): check if drawable
	is a layer before trying to access the layer mask.

2008-02-04  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell-preview.c
	(gimp_display_shell_trace_tri_edge): use a gint for direction, not
	a gchar which might be unsigned. Patch from Giuliano Pochini;
	fixes bug #340965.

2008-02-04  Sven Neumann  <sven@gimp.org>
